2002-11-24  Derek Atkins  <derek@ihtfp.com>

	* src/engine/Account.c -- fix some compiler warnings
	* src/gnome/window-register.c -- fix a compiler warning
	* src/gnome/dialog-scheduledxaction.c -- fix a compiler warning

2002-11-24  David Hampton  <hampton@employees.org>

	* src/app-file/gncmod-app-file.c: 
	* src/gnome-utils/gnc-mdi-utils.c:
	* src/gnome-utils/gnc-mdi-utils.h: Rename the
	gnc_mdi_file_percentage function to gnc_mdi_show_progress.
	
	* src/gnome-utils/gw-gnome-utils-spec.scm: Wrap the
	gnc_mdi_show_progress function so it is accessible from scheme.

	* src/report/report-system/report-system.scm:
	* src/report/report-system/report-utilities.scm: Create utility
	functions for giving progress updates while building reports.

2002-11-23  Joshua Sled  <jsled@asynchronous.org>

	* src/app-utils/prefs.scm (gnc:make-number-range-option): Fix
	wording of pref-widget hints; fixes Bug#99389.

	* src/gnome/glade/sched-xact.glade: 
	* src/gnome/dialog-sx-from-trans.c: 
	* src/gnome/druid-loan.c (gnc_ui_sx_loan_druid_create): 
	* src/gnome-utils/gnc-frequency.c (gnc_frequency_init): 
	* src/gnome/dialog-scheduledxaction.c
	(gnc_ui_scheduled_xaction_editor_dialog_create):
	GnomeDateEdit -> GNCDateEdit; Fixes Bug#99357.

	* src/gnome/dialog-scheduledxaction.c
	(gnc_ui_scheduled_xaction_editor_dialog_create): Removed
	delete-event handling duplicated by close signal from GnomeDialog;
	fixes Bug#99399.
	(sxed_close_event): Check for a valid SX before proceeding; fixes
	Bugs#99350 and dupes [99348,99356,99397].

2002-11-23  Matthew Vanecek <mevanecek@yahoo.com>
	* src/engine/Account.c (xaccAccountCommitEdit): Internationalize
	the PWARN_GUI() string 	argument.

	* src/backend/postgres/PostgresBackend.c: Added messages.h to support
	string internationalization.
	
	* src/backend/postgres/PostgresBackend.c (pgend_session_begin): 
	an xaccBackendSetMessage() call was missing the Backend argument.
	
2002-11-23  Christian Stimming  <stimming@tuhh.de>
